<resources>
    <string name="app_name">Fless</string>
    <string name="start_now">Mulai</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="landingText">Lets Get Started!</string>
    <string name="noHaveAccount">Belum punya akun?</string>
    <string name="haveAccount">Sudah punya akun?</string>
    <string name="forgotPassword">Lupa Password</string>
    <string name="sendVerification">Verifikasi</string>

    //Home
    <string name="totalInt">00</string>
    <string name="suggestion">Saran untuk pengguna</string>
    <string name="progressWeak">Kegiatan kamu hari ini:</string>
    <string name="materialTittle">Materi</string>
    <string name="evaluationTittle">Evaluasi</string>
    <string name="taskHomeTittle">Tugas</string>
    <string name="homeMaterialDesc">Materi yang kamu pelajari</string>
    <string name="homeEvaluationDesc">Latihan yang kamu selesaikan</string>
    <string name="homeTaskDesc">Tugas yang kamu kerjakan</string>
    <string name="time">Waktu</string>
    <string name="process">Kegiatan</string>
    <string name="dayProgress">Kegiatan 3 Hari Terakhir:</string>
    <string name="recentMaterial">Terakhir dilihat</string>


    //Course
    <string name="courseGreeting">Hi, Mau Belajar Apa Hari Ini?</string>
    <string name="searchEmpty">Ga nemu…</string>

    //Task
    <string name="taskTittle">TUGAS</string>
    <string name="taskEmpty">Sepertinya masih kosong…</string>

    //Register and Login
    <string name="helloAgain">Halo Teman!</string>
    <string name="welcomeLogin">Selamat datang!</string>
    <string name="descriptionWelcome">"Senang bisa bertemu kembali."</string>
    <string name="registerInstruction">Terima kasih sudah menjadi bagian dari Fless.</string>
    <string name="createAccount">Selamat bergabung!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="landingTextDescription">Silahkan pilih opsi autentikasi berikut.
        \nKami senang terbang bersamamu.</string>
    <string name="passwordForgot">Lupa Password?</string>
    <string name="passwordFeature">Jangan khawatir, gunakan fitur berikut.</string>

    /Onboarding Title and Description
    <string name="onboardingTittle1">Belajar dimana saja, kapan saja!</string>
    <string name="onboardingDescription1">"Dengen Fless, kamu bisa mengakses materi dan tugas perkuliahan dimana saja dan kapan saja. Tapi jangan lupakan koneksi internet ya!"</string>
    <string name="onboardingTittle2">Nikmati materi dan video kami</string>
    <string name="onboardingDescription2">Nikmati materi pembelajran yang kami desain dengan bermuatan metode belajar self-directed learning dan video untuk membantu pemahamanmu.</string>
    <string name="onboardingTittle3">Personalisasi sesuai kenyamananmu!</string>
    <string name="onboardingDescription3">Gunakan fitur personalisasi kami, untuk membuat prosese belajarmu menjadi lebih nyaman.</string>
    <string name="onboardingTittle4">Fless Now</string>
    <string name="onboardingDescription4">Selamat datang, \nKami senang terbang bersamamu!</string>
    <string name="skip">Skip</string>

    /Onboarding Title and Description
    <string name="tutorialTittle1">Activity Counter</string>
    <string name="tutorialDescription1">Gunakan fitur ini untuk melihat sebarapa banyak kegiatan pembelajaran yang kamu lakukan pada hari ini.</string>
    <string name="tutorialTittle2">Learning Graph</string>
    <string name="tutorialDescription2">Grafik pada halaman utama ini akan menunjukkan penurunan atau peningkatan kegiatan pembelajaranmu dalam 3 hari terakhir.</string>
    <string name="tutorialTittle3">Halaman Materi</string>
    <string name="tutorialDescription3">Tekan tombol "Materi" untuk menuju materi dan pelajari materi dari mata kuliah yang kamu inginkan.</string>
    <string name="tutorialTittle4">Halaman Tugas</string>
    <string name="tutorialDescription4">Lihat tugas yang sedang aktif ataupun selesai melalui halaman tugas dengan menekan tombol "Tugas".</string>

    //Navigation
    <string name="title_home">Beranda</string>
    <string name="title_course">Materi</string>
    <string name="title_task">Tugas</string>
    <string name="title_profile">Akun</string>

    //Profile
    <string name="logout">Keluar</string>
    <string name="contectDev">Hubungi Developer</string>
    <string name="changePassword">Ganti Password</string>
    <string name="credit">Credit</string>
    <string name="appVersion">Fless versi 1.0.1</string>
    <string name="setting">Pengaturan</string>
    <string name="darkMode">Ganti Ke Mode Gelap</string>
    <string name="lightMode">Ganti Ke Mode Terang</string>
    <string name="oldPassword">Password Lama</string>
    <string name="newPassword">Password Baru</string>
    <string name="newPasswordValidation">Konfirmasi Password Baru</string>
    <string name="btnConfirmation">Konfirmasi</string>

    //Course Item
    <string name="courseName">Course Name</string>
    <string name="courseDescription">Course Description</string>
    <string name="totalMaterial">Total Material</string>
    <string name="next">Next</string>
    <string name="previous">prev</string>
    <string name="attempt">Ambil Ujian</string>
    <string name="practiceDesctiption">Kerjakan latihan ini sebelum dapat melanjutkan ke materi berikutnya. Untuk dapat melanjutkan ke materi berikutnya, kamu harus mencapai skor 100 minimal 1 kali.</string>
    <string name="testDesctiption">Kerjakan latihan ini sebelum dapat melanjutkan ke materi berikutnya. Untuk dapat melanjutkan ke materi berikutnya, kamu harus mencapai skor 80 minimal 1 kali.</string>

    //Evaluation
    <string name="dateAttempt">Tanggal Uji Coba</string>
    <string name="score">Skor</string>

    //TaskView
    <string name="chooseButton">Pilih File</string>
    <string name="uploadButton">Kirim File</string>
    <string name="directory">Pilih file yang ingin anda kirim.</string>
    <string name="status">Kamu sudah menyelesaikan tugas ini.</string>
    <string name="komenPenilai">Komentar dari penilai</string>

    //Material
    <string name="material">Material</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>