<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landing.LandingActivity">


    <ImageView
        android:id="@+id/imgLogoText"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_text_logo"
        app:tint="@color/firstBlue" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:width="300dp"
        android:text="@string/login"
        android:backgroundTint="@color/firstBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLandingDescription" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:width="300dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:text="@string/register"
        android:textColor="@color/firstBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgLanding"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoText"
        app:srcCompat="@drawable/ic_asset_landing" />

    <TextView
        android:id="@+id/tvtLanding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/landingText"
        android:textColor="@color/firstBlue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imgLanding"
        app:layout_constraintStart_toStartOf="@+id/imgLanding"
        app:layout_constraintTop_toBottomOf="@+id/imgLanding" />

    <TextView
        android:id="@+id/tvLandingDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/landingTextDescription"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imgLanding"
        app:layout_constraintStart_toStartOf="@+id/imgLanding"
        app:layout_constraintTop_toBottomOf="@+id/tvtLanding" />
</androidx.constraintlayout.widget.ConstraintLayout>